<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_x_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/text_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/app_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description"
            style="@style/text_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/home_description" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <br.egsys.pokedex.ui.common.SearchBarView
                android:id="@+id/search_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xx_large"
                android:hint="@string/search"
                app:layout_constraintBottom_toBottomOf="@id/search_container"
                app:layout_constraintEnd_toStartOf="@id/cancel"
                app:layout_constraintStart_toStartOf="@id/search_container"
                app:layout_constraintTop_toTopOf="@id/search_container" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cancel"
                style="@style/TextTitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/spacing_middle"
                android:paddingStart="@dimen/spacing_large"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/search_bar"
                app:layout_constraintEnd_toEndOf="@id/search_container"
                app:layout_constraintTop_toTopOf="@id/search_bar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_xx_large"
        android:background="@drawable/background_list_pokemons"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_x_large"
        app:layout_constraintBottom_toTopOf="@id/meet_pokemon_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/result_search"
            style="@style/text_large_space_grotesk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_x_large"
            android:text="@string/all_pokemons"
            android:textColor="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pokemons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacing_normal"
            android:overScrollMode="never"
            tools:listitem="@layout/item_pokemon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/empty_pokemon"
            style="@style/text_normal_dm_sans_regular"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/spacing_xx_large"
            android:layout_height="wrap_content"
            android:text="@string/empty_pokemon"
            android:textColor="@color/black"
            android:visibility="gone"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/meet_pokemon_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/spacing_x_large"
        android:paddingVertical="@dimen/spacing_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/random_pokemon"
            style="@style/text_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button"
            android:text="@string/meet_a_pokemon" />

    </FrameLayout>

    <!--    <com.airbnb.lottie.LottieAnimationView-->
    <!--        android:id="@+id/loading"-->
    <!--        android:layout_width="150dp"-->
    <!--        android:layout_height="150dp"-->
    <!--        android:visibility="gone"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/toolbar"-->
    <!--        app:lottie_autoPlay="true"-->
    <!--        app:lottie_loop="true"-->
    <!--        app:lottie_rawRes="@raw/loading"-->
    <!--        tools:visibility="visible" />-->


</androidx.constraintlayout.widget.ConstraintLayout>